--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://midrisr.github.io/",
+  "homepage": "https://midrisr.github.io/react-movies",
   "name": "project",
   "version": "0.1.0",
   "private": true,
