--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+// .gitignore 
+# api keys
+.env 
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# api keys
-.env 
 
 # testing
 /coverage
